# mlops-classification-blueberry

./: .gitignore  CLAUDE.md  check_bg.py  export_classifier.py  paper.md  predict.py  pyproject.toml
experiments/: compare_methods.yaml  jepa.yaml  metric.yaml  rvq.yaml  vqvae.yaml
runs/sup_aug_full/0/: classifier.npz  classifier.pkl  encoder.pt  metrics.json  probe.json
src/: __main__.py  config.py  dataset.py  probe.py  train.py  viz.py
src/models/: autoencoder.py  jepa.py  metric.py  rvq.py  supervised.py  vqvae.py
src/nn/: backbone.py  layers.py  quantizers.py
src/runtimes/: local.py  modal.py
