[project]
name = "intercon2026-blueberry-classification"
version = "0.1.0"
description = "Self-supervised representation learning for blueberry ripeness classification"
requires-python = ">=3.11"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "numpy>=1.26",
    "pillow>=10.0",
    "scikit-learn>=1.4",
    "umap-learn>=0.5",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "modal>=0.64",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[tool.setuptools.packages.find]
include = ["src*"]
